--- a/dedicated-origin.html
+++ b/dedicated-origin.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <img src="//cdnimg.nodejs.kr/images/giphy-downsized-large.gif" />
   <img src="//cdnimg.nodejs.kr/images/big-01.jpg" />
   <img src="//cdnimg.nodejs.kr/images/big-02.jpg" />
   <img src="//cdnimg.nodejs.kr/images/big-03.jpg" />
