--- a/dedicated-we-cache.html
+++ b/dedicated-we-cache.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>dedicated origin</title>
+  <title>dedicated we-cache</title>
   <meta name="author" content="Rhio Kim">
   <style>
     img {
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <img src="//img.nodejs.kr/images/giphy-downsized-large.gif" />
   <img src="//img.nodejs.kr/images/big-01.jpg" />
   <img src="//img.nodejs.kr/images/big-02.jpg" />
   <img src="//img.nodejs.kr/images/big-03.jpg" />
